compiler/tests/fail/typing/x86-64/init_global.jazz
u64[1] g = {1};

export fn main () {
  ArrayInit(g);
}
